--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="https://app.8b.io/app/themes/webamp/projects/shop/assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>daltechmobile</title>
+  <title>daltechmobile</title> 
   
 <link rel="canonical" href="https://548472.8b.io/">https://548472.8b.io/
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -113,7 +113,7 @@ section.menu .link,section.menu .menu-social-list,section.menu .navbar-buttons .
             <div class="title-block mbr-col-sm-12 mbr-col-md-12 mbr-col-lg-6">
                 <h1 class="mbr-section-title mbr-fonts-style mbr-regular mbr-pb-2 display-1">Knitting in <br>Briggs Chainy<br></h1>
                 
-                <p class="mbr-text mbr-fonts-style mbr-light display-4">Modern classic</p>
+                <p class="mbr-text mbr-fonts-style mbr-light display-4">Design by: Computer-Man</p>
                 <div class="mbr-section-btn mbr-pt-3"><a class="btn-primary btn mbr-regular display-4" href="#features3-1w" style="">Shop now</a></div>
             </div>
         </div>
