--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ section.menu .link,section.menu .menu-social-list,section.menu .navbar-buttons .
     <div class="container">
         <div class="mbr-row align-left">
             <div class="title-block mbr-col-sm-12 mbr-col-md-12 mbr-col-lg-6">
-                <h1 class="mbr-section-title mbr-fonts-style mbr-regular mbr-pb-2 display-1"><span style="color:white">Zenith Knitting<br>in Briggs Chany</span></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mbr-regular mbr-pb-2 display-1"><span style="color:white, text-stroke: 1px black" >Zenith Knitting<br>in Briggs Chany</span></h1>
                 
                 <p class="mbr-text mbr-fonts-style mbr-light display-4">Design by: Computer-Man</p>
                 <div class="mbr-section-btn mbr-pt-3"><a class="btn-primary btn mbr-regular display-4" href="#features3-1w" style="">Shop now</a></div>
