--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ section.menu .link,section.menu .menu-social-list,section.menu .navbar-buttons .
                 <h1 class="mbr-section-title mbr-fonts-style mbr-regular mbr-pb-2 display-1"><span style="font-size: 1.2em; color:black; font-weight: bold !important;
     -webkit-text-stroke: 1.6px white; text-stroke: 1.3px white">Zenith Knitting<br>in Briggs Chany</span></h1>
                 
-                <p class="mbr-text mbr-fonts-style mbr-light display-4" style="font-size: 1.3em; font-weith: bold">Design by: Computer-Man</p>
+                <p class="mbr-text mbr-fonts-style mbr-light display-4" style="font-size: 1.3em; font-weight: bold">Design by: Computer-Man</p>
                 <div class="mbr-section-btn mbr-pt-3"><a class="btn-primary btn mbr-regular display-4" href="#features3-1w" style="">Shop now</a></div>
             </div>
         </div>
